--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       run: docker-compose -f docker-compose.test.yml run --rm --entrypoint "/bin/bash" app -c "mix local.hex --force && mix local.rebar --force && mix deps.get && mix deps.compile"
 
     - name: Run migrations
-      run: docker-compose -f docker-compose.test.yml run --rm app /entrypoint.sh
+      run: docker-compose -f docker-compose.test.yml run --rm app mix ecto.setup
 
     - name: Run tests
       run: docker-compose -f docker-compose.test.yml run --rm --entrypoint "/bin/bash" app -c "mix test"
