Add ENV for docker-compose.yml after editing entrypoint.sh along with some css/minor changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     depends_on:
       - db
     environment:
+      MIX_ENV: dev
       DATABASE_HOSTNAME: db
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: postgres
