Add codecov integration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,5 @@ jobs:
     - name: Run migrations
       run: docker-compose -f docker-compose.test.yml run --rm app mix ecto.setup
 
-    - name: Run tests
-      run: docker-compose -f docker-compose.test.yml run --rm --entrypoint "/bin/bash" app -c "mix test"
+    - name: Run tests with coverage
+      run: docker-compose -f docker-compose.test.yml run --rm --entrypoint "/bin/bash" app -c "MIX_ENV=test mix coveralls.json"
