--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,4 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         slug: jennie232/Shorter
-        file: ./_build/test/cover/coveralls.json # Specify the path to the coverage report
+        file: ./_build/test/cover/coveralls.json 
